<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <LinearLayout
        android:id="@+id/btns_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">
        <Button
            android:id="@+id/btn_main"
            android:text="@string/btn_main_fragment"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_heiht"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btn_converter"
            android:text="@string/btn_convert_fragment"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_heiht"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btn_about"
            android:text="@string/btn_about"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_heiht"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
    </LinearLayout>
</FrameLayout>