<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="32dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_app"
            android:textSize="22sp"
            android:layout_marginBottom="30dp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/btn_heiht"
        android:paddingBottom="14sp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_telegram"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp">
            </ImageView>

            <TextView
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link_telegram"
                android:textSize="14sp"
                android:layout_gravity="center_vertical">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_instagram"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp">
            </ImageView>

            <TextView
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link_instagram"
                android:textSize="14sp"
                android:layout_gravity="center_vertical">
            </TextView>
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>